--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                 <div class="title">튜토리얼</div>
                 <div class="swiper-wrapper"></div>
                 <div class="swiper-button-pagination"></div>
-                <a href="#" class="btn btn3">시작하기</a>
+                <!-- 달력으로 넘어가는 공간 -->
+                <a href="calendar.html" class="btn btn3">시작하기</a>
             </div>
         </div>
     </section>
