달력 일정등록 리스트 완성 / 일정 리스트 닫기 기능 추가

--- a/calendar.html
+++ b/calendar.html
@@ -42,6 +42,41 @@
                         <tbody id="calendar-body" class="calendar-body"></tbody>
                     </table>
                 </div>
+
+                <div class="todo_list">
+                    <div class="bg"></div>
+                    <div class="list">
+                        <h5>일정 등록</h5>
+                        <div class="todo_int">
+                            <strong>내용을 키워드로 입력해 주세요.</strong>
+                            <span>
+                                키워드 중심으로 일정의 제모고가 위치를 입력해 주세요. <br>
+                                키워드 단위로 기억할 경우 기억 효율이 극대화 됩니다.
+                            </span>
+                        </div>
+                        <div class="todo_tit">
+                            <b>제목</b>
+                            <input type="text" id="" name="" placeholder="제목을 입력해 주세요.">
+                        </div>
+                        <div>
+                            <b>기간</b>
+                            <input type="text" id="" name="" placeholder="2022-05-10">
+                            <em>~</em>
+                            <input type="text" id="" name="" placeholder="2022-05-10">
+                        </div>
+                        <div>
+                            <b>시간</b>
+                            <input type="text" id="" name="" placeholder="HH-MM">
+                            <em>~</em>
+                            <input type="text" id="" name="" placeholder="HH-MM">
+                        </div>
+                        <div>
+                            <b>메모</b>
+                            <input type="text" id="" name="" placeholder="위치 또는 메모할 내용을 입력해 주세요.">
+                        </div>
+                        <a href="#">등록하기</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
